[UPDATE] обновление верстки главной страницы, добавлен слайдер

--- a/app/scss/base/variables.scss
+++ b/app/scss/base/variables.scss
@@ -12,6 +12,7 @@ $breakpoints: (
   'sm': 768px,
   'xs': 480px,
 
+  'custom-1491': 1491px,
   'custom-1235': 1235px,
   'custom-860': 860px,
   'custom-800': 800px,
