--- a/app/scss/base/svgSprite.scss
+++ b/app/scss/base/svgSprite.scss
@@ -8,7 +8,7 @@
     display: inline-block;
     background-image: url("../images/sprite.svg");
     background-repeat: no-repeat;
-    background-size: 74.4em 200.6em;
+    background-size: 74.4em 230.7em;
 }
 
 .no-svg .svg-icon:before {
@@ -134,8 +134,26 @@
 
 
 
-  .svg-icon.svg-statistics:before {
+  .svg-icon.svg-promo-box-top-text:before {
       background-position: 0em -177.5em;
+      width: 23.2em;
+      height: 13.4em;
+  }
+
+
+
+
+  .svg-icon.svg-rhombus:before {
+      background-position: 0em -190.9em;
+      width: 13.6em;
+      height: 13.4em;
+  }
+
+
+
+
+  .svg-icon.svg-statistics:before {
+      background-position: 0em -204.3em;
       width: 10.3em;
       height: 7em;
   }
@@ -143,8 +161,17 @@
 
 
 
+  .svg-icon.svg-timer:before {
+      background-position: 0em -211.3em;
+      width: 3.3em;
+      height: 3.3em;
+  }
+
+
+
+
   .svg-icon.svg-twitter:before {
-      background-position: 0em -184.5em;
+      background-position: 0em -214.6em;
       width: 2em;
       height: 1.8em;
   }
@@ -153,7 +180,7 @@
 
 
   .svg-icon.svg-vk:before {
-      background-position: 0em -186.3em;
+      background-position: 0em -216.4em;
       width: 2.6em;
       height: 1.6em;
   }
@@ -162,7 +189,7 @@
 
 
   .svg-icon.svg-vote:before {
-      background-position: 0em -187.9em;
+      background-position: 0em -218em;
       width: 12.1em;
       height: 11em;
   }
@@ -171,7 +198,7 @@
 
 
   .svg-icon.svg-wikipedia:before {
-      background-position: 0em -198.9em;
+      background-position: 0em -229em;
       width: 2.8em;
       height: 1.7em;
   }
