--- a/app/scss/base/svgSprite.scss
+++ b/app/scss/base/svgSprite.scss
@@ -8,7 +8,7 @@
     display: inline-block;
     background-image: url("../images/sprite.svg");
     background-repeat: no-repeat;
-    background-size: 74.4em 230.7em;
+    background-size: 74.4em 234.8em;
 }
 
 .no-svg .svg-icon:before {
@@ -89,8 +89,17 @@
 
 
 
-  .svg-icon.svg-navigation:before {
+  .svg-icon.svg-logotype-short:before {
       background-position: 0em -109em;
+      width: 15.2em;
+      height: 4.1em;
+  }
+
+
+
+
+  .svg-icon.svg-navigation:before {
+      background-position: 0em -113.1em;
       width: 7.9em;
       height: 7.8em;
   }
@@ -99,7 +108,7 @@
 
 
   .svg-icon.svg-ok:before {
-      background-position: 0em -116.8em;
+      background-position: 0em -120.9em;
       width: 1.4em;
       height: 2.4em;
   }
@@ -108,7 +117,7 @@
 
 
   .svg-icon.svg-pack:before {
-      background-position: 0em -119.2em;
+      background-position: 0em -123.3em;
       width: 40.3em;
       height: 24.2em;
   }
@@ -117,7 +126,7 @@
 
 
   .svg-icon.svg-presentation:before {
-      background-position: 0em -143.4em;
+      background-position: 0em -147.5em;
       width: 7.8em;
       height: 9.8em;
   }
@@ -126,7 +135,7 @@
 
 
   .svg-icon.svg-prevslogo:before {
-      background-position: 0em -153.2em;
+      background-position: 0em -157.3em;
       width: 24.2em;
       height: 24.3em;
   }
@@ -135,7 +144,7 @@
 
 
   .svg-icon.svg-promo-box-top-text:before {
-      background-position: 0em -177.5em;
+      background-position: 0em -181.6em;
       width: 23.2em;
       height: 13.4em;
   }
@@ -144,7 +153,7 @@
 
 
   .svg-icon.svg-rhombus:before {
-      background-position: 0em -190.9em;
+      background-position: 0em -195em;
       width: 13.6em;
       height: 13.4em;
   }
@@ -153,7 +162,7 @@
 
 
   .svg-icon.svg-statistics:before {
-      background-position: 0em -204.3em;
+      background-position: 0em -208.4em;
       width: 10.3em;
       height: 7em;
   }
@@ -162,7 +171,7 @@
 
 
   .svg-icon.svg-timer:before {
-      background-position: 0em -211.3em;
+      background-position: 0em -215.4em;
       width: 3.3em;
       height: 3.3em;
   }
@@ -171,7 +180,7 @@
 
 
   .svg-icon.svg-twitter:before {
-      background-position: 0em -214.6em;
+      background-position: 0em -218.7em;
       width: 2em;
       height: 1.8em;
   }
@@ -180,7 +189,7 @@
 
 
   .svg-icon.svg-vk:before {
-      background-position: 0em -216.4em;
+      background-position: 0em -220.5em;
       width: 2.6em;
       height: 1.6em;
   }
@@ -189,7 +198,7 @@
 
 
   .svg-icon.svg-vote:before {
-      background-position: 0em -218em;
+      background-position: 0em -222.1em;
       width: 12.1em;
       height: 11em;
   }
@@ -198,7 +207,7 @@
 
 
   .svg-icon.svg-wikipedia:before {
-      background-position: 0em -229em;
+      background-position: 0em -233.1em;
       width: 2.8em;
       height: 1.7em;
   }
