--- a/app/scss/modules/header.scss
+++ b/app/scss/modules/header.scss
@@ -1,6 +1,42 @@
+@keyframes slide-nav {
+  from {
+    top: 0px;
+  }
+
+  to {
+    top: 96px;
+  }  
+}
+
+.header.sticky {
+  background: #fff;
+  position: fixed;
+  margin-top: -20px;
+
+  @include screen('xs', 'max') {
+    margin-top: 0px;
+    padding: 20px;
+  }
+
+  a.header-box-logotype {
+    .svg-icon.svg-logotype {
+      display: none;
+    }
+
+    i.svg-icon.svg-logotype-short {
+      display: block;
+    }
+  }
+
+  .header-box-nav {
+    top: 6px;
+  }
+}
+
 .header {
   width: calc(100% - 40px);
   z-index: 9999;
+  transition: all 0.4s ease;
 
   @include screen('xs', 'max') {
     width: 100%;
@@ -11,6 +47,254 @@
   padding-right: $min-main-padding;
   padding-left: $min-main-padding;
   box-sizing: border-box;
+
+  &-buttom {
+    display: none;
+  }
+
+  .burger {
+    position: absolute;
+    left: 38%;
+    top: 28%;
+    display: block;
+    border-radius: 10px;
+    transform: translateY(50%);
+    border-radius: 100px;
+  
+    span.wand {
+      position: relative;
+      display: block;
+      content: "";
+      background: #312930;
+      height: 1.5px;
+      width: 20px;
+      margin-bottom: 5px;
+      border-radius: 100px;
+    }
+  } 
+
+  &-static.active {
+    position: fixed;
+    height: calc(100vh + 10px);
+    background: #F9EFE1;
+    width: calc(100% - 40px);
+    margin-left: -20px;
+    margin-top: -60px;
+    padding-top: 30px;
+    padding-left: 20px;
+    padding-right: 20px;
+    background-image: url('../images/header-static-bg.svg');
+    background-position: bottom;
+    background-repeat: no-repeat;
+    border-top: 30px solid #fff;
+
+    @include screen('xs', 'max') {
+      background-image: none;
+    }
+
+    @include screen('custom-660', 'max') {
+      overflow-y: auto;
+      overflow-x: hidden;
+    }
+
+    @include screen('xs', 'max') {
+      width: 100%;
+      height: calc(100vh + 30px);
+    }
+
+    .header-box-nav-button {
+      @include screen('xs', 'max') {
+        position: fixed;
+        right: -5px;
+      }
+
+      @include screen('custom-660', 'max') {
+        position: fixed;
+        right: 0;
+        margin-right: 40px;
+      }
+
+      @include screen('xs', 'max') {
+        margin-right: 0px;
+      }
+    }
+
+    .burger {
+      background: #312930;
+      left: 26%;
+      top: -2%;
+      height: 39px;
+      width: 39px;
+
+      span.wand {
+        background: #fff;
+        width: 15px;
+        position: relative;
+        top: 19px;
+        left: 12px;
+        margin-bottom: 0px;
+      }
+
+      span.wand:first-child {
+        transform: rotate(-45deg);
+      }
+
+      span.wand:nth-child(2) {
+        transform: rotate(45deg);
+        top: 18px;
+      }
+
+      span.wand:last-child {
+        display: none;
+      }
+
+    }
+
+    .header-box-nav {
+      animation-name: slide-nav;
+      animation-duration: .3s;
+      top: 96px;
+
+      @include screen('custom-660', 'max') {
+        &.lg {
+          flex-direction: column;
+          display: block;
+          position: unset;
+          left: 0%;
+          padding-top: 50px;
+        }
+      }
+    }
+
+    .header-box-nav-el {
+      @include screen('custom-660', 'max') {
+        margin-bottom: 30px;
+      }
+      
+      &:last-child {
+        margin-bottom: 0px;
+      }
+    }
+
+    .header-box-nav-el > .header-box-nav-el-desc{
+      @include screen('custom-800', 'max') {
+        display: block;
+        font-size: 13px;
+      }
+    }
+
+    .header-buttom {
+      font-family: 'CeraPro';
+      display: none;
+      max-width: 1000px;
+      margin: 0 auto;
+      display: flex;
+      flex-direction: column;
+      height: calc(100% - 10px);
+      justify-content: space-around;
+      padding-top: 50px;
+  
+      &-nav {
+        display: flex;
+        justify-content: space-between;
+        font-size: 20px;
+        flex-wrap: wrap;
+        align-items: center;
+        
+        @include screen('custom-660', 'max') {
+          flex-direction: column;
+        }
+  
+        a {
+          font-size: 20px;
+  
+          @include screen('custom-660', 'max') {
+            padding-bottom: 20px;
+  
+            &:last-child {
+              padding: 0px;
+            }
+          }
+        }
+      }
+  
+      &-help {
+        display: flex;
+        justify-content: space-around;
+  
+        @include screen('custom-660', 'max') {
+          flex-direction: column;
+        }
+  
+        .left, .right {
+          text-align: center;
+        }
+  
+        .left {
+          @include screen('custom-660', 'max') {
+            margin-bottom: 50px;
+          }
+
+          &-desc {
+            font-size: 16px;
+            margin-bottom: 8px;
+          }
+  
+          &-number {
+            font-weight: bold;
+            font-size: 24px;
+            margin-bottom: 25px;
+          }
+        }
+  
+        .right {
+          &-desc {
+            font-size: 16px;
+            margin-bottom: 20px;
+          }
+  
+          &-group-link {
+            margin-right: 37px;
+  
+            &:last-child {
+              margin-right: 0px;
+            }
+          }
+        }
+      }  
+  
+      &-footer {
+        display: flex;
+        justify-content: space-between;
+        font-size: 14px;
+
+        @include screen('custom-660', 'min') {
+          margin-bottom: 50px;
+        }
+
+        @include screen('custom-660', 'max') {
+          flex-direction: column;
+          align-items: center;
+          text-align: center;
+        }
+  
+        .left {
+          color: #AEA08D;
+          @include screen('custom-660', 'max') {
+            margin-bottom: 10px;
+          }
+        }
+  
+        .right {
+          color: #312930;
+  
+          a {
+            color: #EE7754;
+          }
+        }
+      }
+    }
+  }
 
   &-box {
     display: flex;
@@ -29,6 +313,14 @@
         @include screen('xs', 'max') {
           transform: scale(0.7);
         }
+
+        .svg-icon.svg-logotype {
+          display: block;
+        }
+    
+        i.svg-icon.svg-logotype-short {
+          display: none;
+        }
     }
   
     &-nav {
@@ -37,10 +329,18 @@
       align-items: center;
       justify-content: space-around;
       width: 50%;
+      position: absolute;
+      margin: 0 auto;
+      top: 15px;
+      left: 25%;
       @include screen('custom-660', 'max') {
         &.lg {
           display: none;
         }
+      }
+
+      &-button {
+        position: relative;
       }
   
       &-el {
